WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287697
REGRESSION(
290095@main
): Broke ARM NEON compilation
https://bugs.webkit.org/show_bug.cgi?id=287697
Summary
REGRESSION(290095@main): Broke ARM NEON compilation
Alejandro G. Castro
Reported
2025-02-14 04:32:43 PST
We have to replace the usage of the effect methods with dereferences now.
Attachments
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2025-02-14 04:43:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40616
EWS
Comment 2
2025-02-14 07:16:12 PST
Committed
290401@main
(9a1ac1be7be1): <
https://commits.webkit.org/290401@main
> Reviewed commits have been landed. Closing PR #40616 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug