REGRESSION(290095@main): Broke ARM NEON compilation https://bugs.webkit.org/show_bug.cgi?id=287697

Reviewed by Michael Catanzaro.

A missing update of the m_effect member usage after the modification.
It is inside code just compiled for the ARM NEON code, that is why it was
not detected.

* Source/WebCore/platform/graphics/cpu/arm/filters/FEBlendNeonApplier.cpp:
(WebCore::FEBlendNeonApplier::applyPlatform const):
* Source/WebCore/platform/graphics/cpu/arm/filters/FECompositeNeonArithmeticApplier.cpp:
(WebCore::FECompositeNeonArithmeticApplier::apply const):

Canonical link: https://commits.webkit.org/290401@main